# gnc-toolkit

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  entrypoint.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorials.html
.doctrees/: environment.pickle  index.doctree  tutorials.doctree
.doctrees/api/: gnc_toolkit.actuators.doctree  gnc_toolkit.attitude_determination.doctree  gnc_toolkit.attitude_dynamics.doctree  gnc_toolkit.classical_control.doctree  gnc_toolkit.disturbances.doctree  gnc_toolkit.doctree  gnc_toolkit.environment.doctree  gnc_toolkit.fdir.doctree  gnc_toolkit.guidance.doctree  gnc_toolkit.integrators.doctree  gnc_toolkit.kalman_filters.doctree  gnc_toolkit.mission_design.doctree  gnc_toolkit.navigation.doctree  gnc_toolkit.optimal_control.doctree  gnc_toolkit.propagators.doctree  gnc_toolkit.sensors.doctree  gnc_toolkit.simulation.doctree  gnc_toolkit.ssa.doctree  gnc_toolkit.utils.doctree  gnc_toolkit.visualization.doctree  modules.doctree  opengnc.actuators.doctree  opengnc.attitude_determination.doctree  opengnc.attitude_dynamics.doctree  opengnc.classical_control.doctree  opengnc.disturbances.doctree  opengnc.doctree  opengnc.edl.doctree  opengnc.environment.doctree  opengnc.fdir.doctree  opengnc.guidance.doctree  opengnc.integrators.doctree  opengnc.kalman_filters.doctree  opengnc.mission_design.doctree  opengnc.navigation.doctree  opengnc.optimal_control.doctree  opengnc.propagators.doctree  opengnc.sensors.doctree  opengnc.simulation.doctree  (+3 more)
_modules/: index.html
_sources/: index.rst.txt  tutorials.rst.txt
api/: gnc_toolkit.actuators.html  gnc_toolkit.attitude_determination.html  gnc_toolkit.attitude_dynamics.html  gnc_toolkit.classical_control.html  gnc_toolkit.disturbances.html  gnc_toolkit.environment.html  gnc_toolkit.fdir.html  gnc_toolkit.guidance.html  gnc_toolkit.html  gnc_toolkit.integrators.html  gnc_toolkit.kalman_filters.html  gnc_toolkit.mission_design.html  gnc_toolkit.navigation.html  gnc_toolkit.optimal_control.html  gnc_toolkit.propagators.html  gnc_toolkit.sensors.html  gnc_toolkit.simulation.html  gnc_toolkit.ssa.html  gnc_toolkit.utils.html  gnc_toolkit.visualization.html  modules.html  opengnc.actuators.html  opengnc.attitude_determination.html  opengnc.attitude_dynamics.html  opengnc.classical_control.html  opengnc.disturbances.html  opengnc.edl.html  opengnc.environment.html  opengnc.fdir.html  opengnc.guidance.html  opengnc.html  opengnc.integrators.html  opengnc.kalman_filters.html  opengnc.mission_design.html  opengnc.navigation.html  opengnc.optimal_control.html  opengnc.propagators.html  opengnc.sensors.html  opengnc.simulation.html  opengnc.ssa.html  (+2 more)
benchmarks/: results.md  run_benchmarks.py  run_verification.py
docs/: build_docs.py  conf.py  index.rst  requirements.txt  tutorials.rst
examples/: 01_cubesat_detumbling.py  02_vleo_orbit_maintenance.py  03_momentum_dumping.py  04_autonomous_rendezvous.py  05_attitude_estimation_mekf.py  06_ukf_attitude_estimation.py  07_quest_estimation.py  08_orbital_maneuvers.py  09_lambert_solver.py  10_gauss_iod_determination.py  11_visualization_demo.py  README.md  example_simulation.py  sim_config.json  sim_log.csv
tests/: mission_demo.py  test_ab.py  test_actuators_extended.py  test_advanced_features.py  test_advanced_propagators.py  test_attitude_determination.py  test_attitude_dynamics.py  test_attitude_guidance_new.py  test_batch_ls.py  test_budgeting.py  test_ccsds.py  test_classic_controller.py  test_classical_control_new.py  test_continuous_thrust.py  test_covariance.py  test_cr3bp.py  test_disturbances.py  test_dop853_coeffs.py  test_edl.py  test_encke.py  test_end_to_end.py  test_env_extended.py  test_environment.py  test_environment_models.py  test_examples.py  test_fdir.py  test_filters.py  test_fixed_interval_smoother.py  test_flexible_body.py  test_formation_flying.py  test_fuel_slosh.py  test_gauss_jackson.py  test_gravity.py  test_gravity_extras.py  test_gravity_fidelity.py  test_guidance.py  test_integrators.py  test_iod.py  test_kalman_family.py  test_kinematics.py  (+28 more)
tutorials/: 01_introduction.html  02_frames.html  02_frames.ipynb  02_iod_determination.ipynb  03_state_conversions.html  03_state_conversions.ipynb  04_spherical_harmonics.html  05_orbital_propagators.html  06_environment.html  07_iod_determination.html  08_sensors.html  09_linear_kf.html  10_mekf.html  11_ukf.html  12_orbital_maneuvers.html  13_rendezvous.html  14_optimal_control.html  15_attitude_control.html  16_fdir.html  17_e2e_sim.html  18_monte_carlo_verification.html  19_edl_dynamics.html  20_ssa_conjunction.html  21_ground_segment.html
(+706 files in other folders)
