[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenGNC"
version = "1.0.0"
description = "A Guidance, Navigation, and Control toolkit for spacecraft."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Batuhan Akkova" },
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pymsis>=0.6.0",
    "ppigrf>=0.1.0",
    "sgp4>=2.21",
    "casadi>=3.6.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "dash>=2.0.0",
    "numba>=0.56.0",
    "jplephem>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opengnc = ["*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # Pyflakes & pycodestyle
    "I",                # isort
    "N",                # pep8-naming
    "D",                # pydocstyle (NumPy style)
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "C4",               # flake8-comprehensions
    "SIM",              # flake8-simplify
    "PTH",              # flake8-use-pathlib
    "RUF",              # Ruff-specific rules
]
ignore = [
    "D100", "D104",     # Missing docstring in public module/package
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false





